homework annotations
