# config/packages/nelmio_api_doc.yaml
@@ -40,6 +40,61 @@ nelmio_api_doc:
                             description: "Invalid credentials"
         components:
             schemas:
+                HomeworkPostRequest:
+                    type: object
+                    required:
+                        - data
+                        - files
+                    properties:
+                        data:
+                            type: object
+                            required:
+                                - description
+                                - lesson
+                                - deadline
+                            properties:
+                                description:
+                                    type: string
+                                    maxLength: 255
+                                    example: "Complete exercises 1-10 from Chapter 3"
+                                lesson:
+                                    type: integer
+                                    example: 101
+                                deadline:
+                                    type: string
+                                    format: date-time
+                                    example: "2025-03-01T23:59:59Z"
+                        files:
+                            type: array
+                            items:
+                                type: string
+                                format: binary
+
+                HomeworkUpdateRequest:
+                    type: object
+                    required:
+                        - data
+                        - files
+                    properties:
+                        data:
+                            type: object
+                            required:
+                                - description
+                                - deadline
+                            properties:
+                                description:
+                                    type: string
+                                    maxLength: 255
+                                    example: "Revise the exercises and solve additional problems"
+                                deadline:
+                                    type: string
+                                    format: date-time
+                                    example: "2025-03-05T23:59:59Z"
+                        files:
+                            type: array
+                            items:
+                                type: string
+                                format: binary
                 GradePostRequest:
                     type: object
                     properties:
